BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_CaseCreationRules__c.object
<CustomObject>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related to Case Creation Rule</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Case_Creation_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_Actual_Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accept Payment</fullName>
                </value>
                <value>
                    <fullName>Ack customer</fullName>
                </value>
                <value>
                    <fullName>Acknowledge customer</fullName>
                </value>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Address bandwidth</fullName>
                </value>
                <value>
                    <fullName>Adjust appointment</fullName>
                </value>
                <value>
                    <fullName>Adjust browser settings</fullName>
                </value>
                <value>
                    <fullName>Adjust due date</fullName>
                </value>
                <value>
                    <fullName>Adjust service</fullName>
                </value>
                <value>
                    <fullName>Advise PC clean up</fullName>
                </value>
                <value>
                    <fullName>Application restart</fullName>
                </value>
                <value>
                    <fullName>Apply adjustment</fullName>
                </value>
                <value>
                    <fullName>Apply adjustments</fullName>
                </value>
                <value>
                    <fullName>Apply credits</fullName>
                </value>
                <value>
                    <fullName>Apply extension</fullName>
                </value>
                <value>
                    <fullName>Apply payment</fullName>
                </value>
                <value>
                    <fullName>Apply Token(s) from bank</fullName>
                </value>
                <value>
                    <fullName>Apply tokens</fullName>
                </value>
                <value>
                    <fullName>Begin prov new service</fullName>
                </value>
                <value>
                    <fullName>Cancel account</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Communicate to customer</fullName>
                </value>
                <value>
                    <fullName>communicate to PM</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete investigate</fullName>
                </value>
                <value>
                    <fullName>Complete report</fullName>
                </value>
                <value>
                    <fullName>Complete research</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Contact customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Active__c</fullName>
        <formula>IF( ExpiryDate__c  &lt;  TODAY() , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Actual_Issue__c</fullName>
        <label>Actual Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CustomerRequestType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Application</fullName>
                </value>
                <value>
                    <fullName>3rd Party Application Issue</fullName>
                </value>
                <value>
                    <fullName>3rd party Device Issue</fullName>
                </value>
                <value>
                    <fullName>3rd Party Equip</fullName>
                </value>
                <value>
                    <fullName>Ability to Solve Issue</fullName>
                </value>
                <value>
                    <fullName>Accessibility/Wait times</fullName>
                </value>
                <value>
                    <fullName>Account not Set-up</fullName>
                </value>
                <value>
                    <fullName>Account Past Due</fullName>
                </value>
                <value>
                    <fullName>Activation Failure</fullName>
                </value>
                <value>
                    <fullName>Add Authorized User</fullName>
                </value>
                <value>
                    <fullName>Add Core Service</fullName>
                </value>
                <value>
                    <fullName>Add New Core Service</fullName>
                </value>
                <value>
                    <fullName>Add New Premium Service</fullName>
                </value>
                <value>
                    <fullName>Add Premium Service</fullName>
                </value>
                <value>
                    <fullName>Add professional Voice Install</fullName>
                </value>
                <value>
                    <fullName>Add Voice Service</fullName>
                </value>
                <value>
                    <fullName>Add Wireless Router</fullName>
                </value>
                <value>
                    <fullName>Adjust service</fullName>
                </value>
                <value>
                    <fullName>Administrator login</fullName>
                </value>
                <value>
                    <fullName>Advertising/Marketing Accuracy</fullName>
                </value>
                <value>
                    <fullName>Agent Courtesy</fullName>
                </value>
                <value>
                    <fullName>Agent Courtesy/Professionalism</fullName>
                </value>
                <value>
                    <fullName>Agent Understandability</fullName>
                </value>
                <value>
                    <fullName>AP Issue</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Application Issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Customer</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Hughes</fullName>
                </value>
                <value>
                    <fullName>Apply Static IP</fullName>
                </value>
                <value>
                    <fullName>Appointment Confirmation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseLastModifiedDate__c</fullName>
        <label>Case Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_CaseOwner__c</fullName>
        <label>Case Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Enterprise Billing</fullName>
                </value>
                <value>
                    <fullName>ESC Advanced Billing Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Billing Level 1</fullName>
                </value>
                <value>
                    <fullName>ESC Chronic Site Team</fullName>
                </value>
                <value>
                    <fullName>ESC Control Desk</fullName>
                </value>
                <value>
                    <fullName>ESC Corporate CSM</fullName>
                </value>
                <value>
                    <fullName>ESC Field Support Agent Terrestrial</fullName>
                </value>
                <value>
                    <fullName>ESC Field Support VSAT</fullName>
                </value>
                <value>
                    <fullName>ESC Level 1 Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Level 2 Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Level 3 Agent</fullName>
                </value>
                <value>
                    <fullName>ESC Network Associates Team</fullName>
                </value>
                <value>
                    <fullName>ESC Onsite Management</fullName>
                </value>
                <value>
                    <fullName>ESC Post Install Provisioning</fullName>
                </value>
                <value>
                    <fullName>ESC Program Management Support</fullName>
                </value>
                <value>
                    <fullName>ESC Sales Support</fullName>
                </value>
                <value>
                    <fullName>Installation Support</fullName>
                </value>
                <value>
                    <fullName>Level 3 Field Service Support</fullName>
                </value>
                <value>
                    <fullName>Order Administration</fullName>
                </value>
                <value>
                    <fullName>Pre-qualification</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>Repair Support</fullName>
                </value>
                <value>
                    <fullName>Retail Billing</fullName>
                </value>
                <value>
                    <fullName>Tech Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseRecordType__c</fullName>
        <description>Case Record Type to be used</description>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Office Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseSubtype__c</fullName>
        <label>Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
                <value>
                    <fullName>Cancel Core Service (Retention)</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Customer Communication</fullName>
                </value>
                <value>
                    <fullName>Customer Complaint</fullName>
                </value>
                <value>
                    <fullName>Customer follow-up</fullName>
                </value>
                <value>
                    <fullName>Discovery Error</fullName>
                </value>
                <value>
                    <fullName>DVR request</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Equipment issue</fullName>
                </value>
                <value>
                    <fullName>Express Backup</fullName>
                </value>
                <value>
                    <fullName>Gateway Provisioning</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Hughes Truck Roll</fullName>
                </value>
                <value>
                    <fullName>Install Issue</fullName>
                </value>
                <value>
                    <fullName>Internet Service</fullName>
                </value>
                <value>
                    <fullName>Key FOB provisioning</fullName>
                </value>
                <value>
                    <fullName>Leased equipment</fullName>
                </value>
                <value>
                    <fullName>myHughesNet Issue</fullName>
                </value>
                <value>
                    <fullName>NAP Truck Roll</fullName>
                </value>
                <value>
                    <fullName>NE Esc</fullName>
                </value>
                <value>
                    <fullName>New Circuit</fullName>
                </value>
                <value>
                    <fullName>New Site Monitoring</fullName>
                </value>
                <value>
                    <fullName>NMC Esc</fullName>
                </value>
                <value>
                    <fullName>Offers/Programs</fullName>
                </value>
                <value>
                    <fullName>Order Modification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CaseType__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced Warranty Replacement</fullName>
                </value>
                <value>
                    <fullName>Chronic</fullName>
                </value>
                <value>
                    <fullName>NE Action</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>PM Action</fullName>
                </value>
                <value>
                    <fullName>Pre-install</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Provisioning</fullName>
                </value>
                <value>
                    <fullName>PSR</fullName>
                </value>
                <value>
                    <fullName>Repair Field</fullName>
                </value>
                <value>
                    <fullName>Repair Remote</fullName>
                </value>
                <value>
                    <fullName>Replacement with No Return</fullName>
                </value>
                <value>
                    <fullName>Retail Support</fullName>
                </value>
                <value>
                    <fullName>Return for Credit</fullName>
                </value>
                <value>
                    <fullName>Return of Lease</fullName>
                </value>
                <value>
                    <fullName>Return of Lease Collect</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Service Changes</fullName>
                </value>
                <value>
                    <fullName>Service Provisioning</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Technician Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_CurrentQueue__c</fullName>
        <label>Current Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CustomerRequestType__c</fullName>
        <label>Customer Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_SuspectedAsset__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account past Due</fullName>
                </value>
                <value>
                    <fullName>Add/Remove Services</fullName>
                </value>
                <value>
                    <fullName>Add/Upgrade Service</fullName>
                </value>
                <value>
                    <fullName>Add new role</fullName>
                </value>
                <value>
                    <fullName>Automated Call</fullName>
                </value>
                <value>
                    <fullName>Billing Issues</fullName>
                </value>
                <value>
                    <fullName>Bill Inquiry/Dispute</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Center Esc</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t make calls</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t receive calls</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Receive Mail - Any</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Receive Mail - Specific Domain(s)</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Send Mail - Any</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t Send Mail - Specific Domain(s)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Cancel Transport</fullName>
                </value>
                <value>
                    <fullName>Cancel Voice</fullName>
                </value>
                <value>
                    <fullName>Cancel VSAT</fullName>
                </value>
                <value>
                    <fullName>Cannot Locate</fullName>
                </value>
                <value>
                    <fullName>Change Service</fullName>
                </value>
                <value>
                    <fullName>Change Services</fullName>
                </value>
                <value>
                    <fullName>Chronic site</fullName>
                </value>
                <value>
                    <fullName>Chronic Sites - Non Contract</fullName>
                </value>
                <value>
                    <fullName>Circuit not Performing</fullName>
                </value>
                <value>
                    <fullName>Circuit provisioning</fullName>
                </value>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Code Upgrade Cleanup</fullName>
                </value>
                <value>
                    <fullName>Community Support</fullName>
                </value>
                <value>
                    <fullName>Content Not Updating/Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_DataTimeClosed__c</fullName>
        <label>Data/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_DateTimeOpened__c</fullName>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_LastModifiedinDays__c</fullName>
        <inlineHelpText>The minimum no.of days for which Closed cases are not modified matching to this Case Creation Rule</inlineHelpText>
        <label>Last Modified in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSvc_RIA__c</fullName>
        <formula>IF(((TEXT(HSvc_CustomerRequestType__c)) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Action__c)) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Actual_Issue__c)) &lt;&gt; &apos;&apos;),
	TEXT(HSvc_CustomerRequestType__c) &amp; &apos;/&apos; &amp; TEXT(HSvc_Action__c) &amp; &apos;/&apos; &amp; TEXT(HSvc_Actual_Issue__c),
	IF(((TEXT(HSvc_CustomerRequestType__c)) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Action__c)) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Actual_Issue__c)) == &apos;&apos;),
		TEXT(HSvc_CustomerRequestType__c) &amp; &apos;/&apos; &amp; TEXT(HSvc_Action__c),
		IF(((TEXT(HSvc_CustomerRequestType__c)) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Action__c)) == &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Actual_Issue__c)) &lt;&gt; &apos;&apos;),
			TEXT(HSvc_CustomerRequestType__c) &amp; &apos;/&apos; &amp; TEXT(HSvc_Actual_Issue__c),
			IF(((TEXT(HSvc_CustomerRequestType__c)) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Action__c)) == &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Actual_Issue__c)) == &apos;&apos;),
				TEXT(HSvc_CustomerRequestType__c),
				IF(((TEXT(HSvc_CustomerRequestType__c)) == &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Action__c)) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Actual_Issue__c)) &lt;&gt; &apos;&apos;),
					TEXT(HSvc_Action__c) &amp; &apos;/&apos; &amp; TEXT(HSvc_Actual_Issue__c),
					IF(((TEXT(HSvc_CustomerRequestType__c)) == &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Action__c)) == &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Actual_Issue__c)) &lt;&gt; &apos;&apos;),
						TEXT(HSvc_Actual_Issue__c),
						IF(((TEXT(HSvc_CustomerRequestType__c)) == &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Action__c)) &lt;&gt; &apos;&apos;) &amp;&amp; ((TEXT(HSvc_Actual_Issue__c)) == &apos;&apos;),
							TEXT(HSvc_Action__c),&apos;&apos;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RIA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ResolutionCode__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>TNF – Cancelled Service</fullName>
                </value>
                <value>
                    <fullName>TNF – Customer Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_RuleKey__c</fullName>
        <description>Rule Key to uniquely identify a rule</description>
        <formula>TEXT( HSvc_CaseRecordType__c ) &amp; &quot;^^^&quot; &amp;
TEXT(HSvc_CaseType__c) &amp; &quot;^^^&quot; &amp; 
TEXT(HSvc_CaseSubtype__c) &amp; &quot;^^^&quot; &amp; 
TEXT(HSvc_CustomerRequestType__c) &amp; &quot;^^^&quot; &amp; TEXT(HSvc_SuspectedAsset__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Case_Creation_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_SuspectedAsset__c</fullName>
        <label>Product Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HSvc_CaseRecordType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active QoS</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>BOM</fullName>
                </value>
                <value>
                    <fullName>BYOB</fullName>
                </value>
                <value>
                    <fullName>Customer Gateway</fullName>
                </value>
                <value>
                    <fullName>Customer Tools</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>DVR</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>Field Maintenance</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Guest Services</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Helpdesk Support</fullName>
                </value>
                <value>
                    <fullName>Install Support</fullName>
                </value>
                <value>
                    <fullName>Key FOB</fullName>
                </value>
                <value>
                    <fullName>Modem</fullName>
                </value>
                <value>
                    <fullName>Premium Services</fullName>
                </value>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>Satellite Broadband</fullName>
                </value>
                <value>
                    <fullName>Satellite Narrowband</fullName>
                </value>
                <value>
                    <fullName>Secure LAN</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Switch</fullName>
                </value>
                <value>
                    <fullName>Terrestrial Wireless</fullName>
                </value>
                <value>
                    <fullName>Terrestrial Wireline</fullName>
                </value>
                <value>
                    <fullName>VADB</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Wi-Fi</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the Product Name to which Rule should be linked to</description>
        <label>Product Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.HSvc_SuspectedAsset__c</field>
                <operation>equals</operation>
                <valueField>HNS_Products__c.Product_Grouping_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.HSvc_SuspectedAsset__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Duplicate Case Elimination</relationshipLabel>
        <relationshipName>Duplicate_Case_Elimination</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Duplicate Case Elimination</label>
    <listViews>
        <fullName>All</fullName>
        <columns>HSvc_CaseRecordType__c</columns>
        <columns>NAME</columns>
        <columns>HSvc_CaseType__c</columns>
        <columns>HSvc_CaseSubtype__c</columns>
        <columns>HSvc_SuspectedAsset__c</columns>
        <columns>HSvc_RIA__c</columns>
        <columns>HSvc_LastModifiedinDays__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DCE-{00000}</displayFormat>
        <label>Duplicate Case Elimination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Case Elimination</pluralLabel>
    <recordTypes>
        <fullName>B2BGeneralCase</fullName>
        <active>true</active>
        <label>B2B General Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>B2CGeneralCase</fullName>
        <active>true</active>
        <label>B2C General Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>InstallWorkOrder</fullName>
        <active>true</active>
        <label>Install Work Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>OfficeOnly</fullName>
        <active>true</active>
        <label>Office Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>RMA</fullName>
        <active>true</active>
        <label>RMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>RepairWorkOrder</fullName>
        <active>true</active>
        <label>Repair Work Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <description>Expiry Date cannot be set in past and cannot be less than the effective date</description>
        <errorConditionFormula>OR(ExpiryDate__c &lt; TODAY(),ExpiryDate__c &lt; EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>ExpiryDate__c</errorDisplayField>
        <errorMessage>This validation rule ensures that the expiry date is set in future and is greater that the effective date</errorMessage>
    </validationRules>
</CustomObject>